# cutils

./: .gitignore  Cargo.toml
src/: arrays.rs  deferred.rs  definitions.rs  errors.rs  files.rs  ignore.rs  inspection.rs  lib.rs
src/strings/: common.rs  cstr.rs  internals.rs  mod.rs  static_str_macro.rs  str_macro.rs  string_macro.rs  u16cstr.rs  u32cstr.rs  widestr_convs.rs
src/strings/writes/: fmt.rs  io.rs  mod.rs
tests/: test_catch_unwind.rs  test_u16_macro.rs  test_u32_macro.rs  test_u8_macro.rs  test_wide_macro.rs
