[package]
name = "cutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = { version = "*", optional = true }
winapi = { version = "*", optional = true, features = [
  "minwindef",
  "winerror",
  "handleapi",
] }
get-last-error = { version = "*", optional = true }
memoffset = { version = "*", optional = true }
cutils-macro = { git = "https://github.com/asakhar/cutils-macro.git" }

[features]
default = ["widestring", "winapi", "get-last-error"]
widestring = ["dep:widestring"]
winapi = ["dep:winapi"]
get-last-error = ["dep:get-last-error"]
memoffset = ["dep:memoffset"]
no_std = []