[package]
name = "cutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = { version = "*", optional = true }
winapi = { version = "*", optional = true, features = [
  "minwindef",
  "winerror",
  "handleapi",
  "sysinfoapi",
  "fileapi",
  "cfgmgr32",
  "errhandlingapi"
] }
memoffset = { version = "*", optional = true }
# cutils-macro = { path = "cutils-macro" }
cutils-macro = { git = "https://github.com/asakhar/cutils-macro.git" }

[features]
default = ["widestring", "winapi"]
widestring = ["dep:widestring"]
winapi = ["dep:winapi"]
memoffset = ["dep:memoffset"]
no_std = []
